<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Rotina020_Manual" Id="{5f460d8d-9a7a-4ad1-8bec-3363f2ac922c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Rotina020_Manual
VAR
	status: INT;
	
	posicaoAtual: STRING;
	envialog: STRING;
	
	fbTimeVentila: ton;
	fbTimeAqueci: ton;
	
	totalManual: STRING(255);
	tempo: STRING(255);
	
	Estufa: INT;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbTimeVentila();
fbTimeAqueci();
Estufa:= 1;

CASE status OF

0:
IF gvl_p.arrStatusEstufas[Estufa].startManual AND STRING_TO_DT(gvl.progInicio[Estufa]) <= systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime)  THEN
	status:= 5;
	
	gvl.bstartchart020:= TRUE;
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,1];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,1];
	gvl.liga_ventilacao_020:= TRUE;
	fbTimeVentila(in:= TRUE, pt:=T#1S);
	
///// GERADOR DE LOG -------------------------------------------------------------

envialog:= 'Programação Manual Iniciada ESTUFA 020';
gvl.logRegister19:= envialog;

	gvl_p.etapa_process[Estufa] := 'Inicializando';
	
ELSE
	status:= 0;
	IF gvl_p.arrStatusEstufas[Estufa].start THEN
		gvl_p.etapa_process[Estufa] := gvl.progInicio[Estufa];
	END_IF
END_IF
5:
IF fbTimeVentila.Q THEN
	status:= 10;
	gvl.liga_ventilacao_020:=FALSE;
	fbTimeVentila(in:= FALSE);
ELSE
	status:= 5;
END_IF

10:
IF gvl.ventilacao_Ligada_020 THEN
	status:= 15;
	
	gvl.liga_aquecimento_020:= TRUE;
	fbTimeAqueci(in:= TRUE, pt:= T#1S);
	
///// GERADOR DE LOG -------------------------------------------------------------

envialog:= 'Aquecendo ESTUFA 020';
gvl.logRegister19:= envialog;
	gvl_p.etapa_process[Estufa] := 'Aquecendo';
	
ELSE
	status:= 10;
END_IF

15:
IF fbTimeAqueci.Q THEN
	status:= 20;
	
	gvl.liga_aquecimento_020:= FALSE;
	fbTimeAqueci(in:=false);
ELSE
	status:= 15;
END_IF

20:
IF gvl.zona1atual_020 >= gvl_p.zona1setpt_020 THEN
	status:= 30;
	
gvl.progInicio[Estufa]:= DT_TO_STRING(gvl.somaTempo);
	
///// CALCULAR FIM DA SECAGEM E DA ARMAZENAGEM --------------------------------------------------------------------------------

totalManual:= insert('T#h',INT_TO_STRING(gvl.totalManual[Estufa]),2);
gvl_p.arrStatusEstufas[Estufa].inicioSecagem := STRING_TO_DT(gvl.progInicio[Estufa]);
gvl_p.arrStatusEstufas[Estufa].fimSecagem := STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(totalManual);
gvl_P.arrStatusEstufas[Estufa].prevFimSeca := gvl_p.arrStatusEstufas[Estufa].fimSecagem;
//gvl_p.arrStatusEstufas[0].fimArmazenagem := gvl_p.arrStatusEstufas[0].fimSecagem + gvl_p.arrStatusEstufas[0].tempoArmazenagem ;

///// IMPRIMIR A HORA E A DATA DO INICIO DA SECAGEM ---------------------------------------------------------------------------
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := '';
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,gvl.hora);
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,':');
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,gvl.minuto);
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,' ');
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,gvl.dia);
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,'/');
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,gvl.mes);
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,'/');
gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem,gvl.ano);

//--------------------REATOR------------------------------------

IF gravarConfigPosicao_Reator.bGravarConfigPosicao_Reator THEN
	gvl_p.arrStatusEstufas[Estufa].inicioReator := '';
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,gvl.hora);
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,':');
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,gvl.minuto);
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,' ');
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,gvl.dia);
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,'/');
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,gvl.mes);
	gvl_p.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,'/');
	gvl_P.arrStatusEstufas[Estufa].inicioReator := concat(gvl_p.arrStatusEstufas[Estufa].inicioReator,gvl.ano);
END_IF

///// DECOMPOR A VARIAVEL FIM DA SECAGEM -----------------------------------------------------------------------------------------------
gvl_p.arrStatusEstufas[Estufa].diaSec := MID(STR:= DT_TO_STRING(gvl_p.arrStatusEstufas[Estufa].fimSecagem) , LEN:= 2, POS:=12);
gvl_p.arrStatusEstufas[Estufa].mesSec := MID(STR:= DT_TO_STRING(gvl_p.arrStatusEstufas[Estufa].fimSecagem), LEN:= 2, POS:=9);
gvl_p.arrStatusEstufas[Estufa].anoSec := MID(STR:= DT_TO_STRING(gvl_p.arrStatusEstufas[Estufa].fimSecagem), LEN:= 2, POS:=6);
gvl_p.arrStatusEstufas[Estufa].horaSec := MID(STR:= DT_TO_STRING(gvl_p.arrStatusEstufas[Estufa].fimSecagem), LEN:= 2, POS:=15);
gvl_p.arrStatusEstufas[Estufa].minutoSec := MID(STR:= DT_TO_STRING(gvl_p.arrStatusEstufas[Estufa].fimSecagem), LEN:= 2, POS:=18);

///// IMPRIMIR A HORA E A DATA DO FIM DA SECAGEM --------------------------------------------------------------------------------------------------------
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := '';
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,gvl_p.arrStatusEstufas[0].horaSec);
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,':');
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,gvl_p.arrStatusEstufas[0].minutoSec);
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,' ');
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,gvl_p.arrStatusEstufas[0].diaSec);
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,'/');
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,gvl_p.arrStatusEstufas[0].mesSec);
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,'/');
gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := concat(gvl_p.arrStatusEstufas[Estufa].statusFimSecagem,gvl_p.arrStatusEstufas[0].anoSec);


///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T1 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T1';

ELSE
	IF gvl_p.arr_CustomTime_020[1,1] = 0 THEN
		status:= 45;
	END_IF
	status:= 20;
END_IF

30:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,1]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 31;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,2];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,2];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T2 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T2';
	
ELSE
	status:= 30;
END_IF

31:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,2]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 32;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,3];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,3];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T3 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T3';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,2] = 0 THEN
		status:= 45;
	END_IF
	status:= 31;
END_IF

32:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,3]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 33;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,4];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,4];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T4 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T4';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,3] = 0 THEN
		status:= 45;
	END_IF
	status:= 32;
END_IF

33:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,4]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 34;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,5];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,5];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T5 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T5';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,4] = 0 THEN
		status:= 45;
	END_IF
	status:= 33;
END_IF

34:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,5]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 35;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,6];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,6];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T6 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T6';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,5] = 0 THEN
		status:= 45;
	END_IF
	status:= 34;
END_IF

35:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,6]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 36;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,7];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,7];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T7 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T7';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,6] = 0 THEN
		status:= 45;
	END_IF
	status:= 35;
END_IF

36:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,7]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 37;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,8];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,8];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T8 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T8';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,7] = 0 THEN
		status:= 45;
	END_IF
	status:= 36;
END_IF

37:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,8]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 38;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,9];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,9];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T9 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T9';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,8] = 0 THEN
		status:= 45;
	END_IF
	status:= 37;
END_IF

38:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,9]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 40;
	
	gvl_p.zona1setpt_020:= gvl_p.arr_CustomTime_020[0,10];
	gvl_p.zona2setpt_020:= gvl_p.arr_CustomTime_020[0,10];
	gvl.progInicio[Estufa]:= DT_TO_STRING(STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo));
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Inicio T10 ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= 'T10';
	
ELSE
	IF gvl_p.arr_CustomTime_020[1,9] = 0 THEN
		status:= 45;
	END_IF
	status:= 38;
END_IF

40:
tempo:= insert('T#h',INT_TO_STRING(gvl_p.arr_CustomTime_020[1,10]),2);
IF STRING_TO_DT(gvl.progInicio[Estufa]) + STRING_TO_TIME(tempo) = systemtime_to_dt(gvl.fbGetLocalSystemTime.systemTime) THEN
	status:= 50;
	
	gvl_p.arrStatusEstufas[Estufa].startManual:= FALSE;
	gvl.bstartchart020:= FALSE;
	gvl.desl_aquecimento_020:= TRUE;
	fbTimeAqueci(in:=TRUE, pt:=T#1S);
	
	gvl_p.etapa_process[Estufa] := '';
	
	gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := '';
	gvl_p.arrStatusEstufas[Estufa].inicioReator := '';
	gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := '';
	gvl_p.arrStatusEstufas[Estufa].statusFimArmazenagem := '';
	gvl_p.arrStatusEstufas[Estufa].fimSecagem:= DT#1970-1-1-0:0:0;
	gvl.endArm20:= T#0S;
	gvl.endSeca20:= T#0S;
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Programação Finalizada ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= '';

ELSE
	IF gvl_p.arr_CustomTime_020[1,10] = 0 THEN
		status:= 45;
	END_IF
	status:= 40;
END_IF

45:
IF gvl_p.arrStatusEstufas[Estufa].startManual THEN
status:= 50;
	
	gvl_p.arrStatusEstufas[Estufa].startManual:= FALSE;
	gvl.bstartchart020:= FALSE;
	gvl.desl_aquecimento_020:= TRUE;
	fbTimeAqueci(in:=TRUE, pt:=T#1S);
	
	gvl_p.etapa_process[Estufa] := '';
	
	gvl_p.arrStatusEstufas[Estufa].statusInicioSecagem := '';
	gvl_p.arrStatusEstufas[Estufa].inicioReator := '';
	gvl_p.arrStatusEstufas[Estufa].statusFimSecagem := '';
	gvl_p.arrStatusEstufas[Estufa].statusFimArmazenagem := '';
	gvl_p.arrStatusEstufas[Estufa].fimSecagem:= DT#1970-1-1-0:0:0;
	gvl.endArm20:= T#0S;
	gvl.endSeca20:= T#0S;
	
///// GERADOR DE LOG -------------------------------------------------------------
envialog:= 'Programação Finalizada ESTUFA 020';
gvl.logRegister19:= envialog;

gvl_p.etapa_process[1]:= '';

ELSE
	status:= 45;
END_IF

50:
IF fbTimeAqueci.Q THEN
	status:= 0;
	
	gvl.desl_aquecimento_020:= FALSE;
	fbTimeAqueci(in:= FALSE);
	
ELSE
	status:= 50;
END_IF
END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="Rotina020_Manual">
      <LineId Id="189" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="480" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="223" Count="0" />
      <LineId Id="584" Count="2" />
      <LineId Id="583" Count="0" />
      <LineId Id="587" Count="0" />
      <LineId Id="224" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="255" Count="2" />
      <LineId Id="15" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="173" Count="1" />
      <LineId Id="169" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="175" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="180" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="589" Count="2" />
      <LineId Id="588" Count="0" />
      <LineId Id="225" Count="1" />
      <LineId Id="33" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="181" Count="0" />
      <LineId Id="186" Count="2" />
      <LineId Id="183" Count="1" />
      <LineId Id="182" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="44" Count="0" />
      <LineId Id="269" Count="1" />
      <LineId Id="46" Count="0" />
      <LineId Id="435" Count="0" />
      <LineId Id="437" Count="0" />
      <LineId Id="47" Count="50" />
      <LineId Id="228" Count="0" />
      <LineId Id="482" Count="1" />
      <LineId Id="481" Count="0" />
      <LineId Id="608" Count="0" />
      <LineId Id="531" Count="0" />
      <LineId Id="484" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="485" Count="2" />
      <LineId Id="43" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="439" Count="0" />
      <LineId Id="128" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="293" Count="0" />
      <LineId Id="309" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="609" Count="0" />
      <LineId Id="536" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="130" Count="0" />
      <LineId Id="294" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="441" Count="0" />
      <LineId Id="297" Count="4" />
      <LineId Id="310" Count="0" />
      <LineId Id="302" Count="3" />
      <LineId Id="610" Count="0" />
      <LineId Id="540" Count="0" />
      <LineId Id="306" Count="1" />
      <LineId Id="489" Count="1" />
      <LineId Id="308" Count="0" />
      <LineId Id="488" Count="0" />
      <LineId Id="296" Count="0" />
      <LineId Id="311" Count="1" />
      <LineId Id="442" Count="0" />
      <LineId Id="313" Count="9" />
      <LineId Id="612" Count="0" />
      <LineId Id="611" Count="0" />
      <LineId Id="323" Count="1" />
      <LineId Id="492" Count="1" />
      <LineId Id="491" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="295" Count="0" />
      <LineId Id="327" Count="1" />
      <LineId Id="443" Count="0" />
      <LineId Id="329" Count="9" />
      <LineId Id="614" Count="0" />
      <LineId Id="613" Count="0" />
      <LineId Id="339" Count="1" />
      <LineId Id="495" Count="1" />
      <LineId Id="494" Count="0" />
      <LineId Id="341" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="358" Count="0" />
      <LineId Id="343" Count="0" />
      <LineId Id="444" Count="0" />
      <LineId Id="344" Count="9" />
      <LineId Id="616" Count="0" />
      <LineId Id="615" Count="0" />
      <LineId Id="354" Count="1" />
      <LineId Id="498" Count="1" />
      <LineId Id="497" Count="0" />
      <LineId Id="356" Count="0" />
      <LineId Id="342" Count="0" />
      <LineId Id="359" Count="1" />
      <LineId Id="445" Count="0" />
      <LineId Id="361" Count="9" />
      <LineId Id="618" Count="0" />
      <LineId Id="617" Count="0" />
      <LineId Id="371" Count="1" />
      <LineId Id="501" Count="1" />
      <LineId Id="500" Count="0" />
      <LineId Id="373" Count="0" />
      <LineId Id="357" Count="0" />
      <LineId Id="375" Count="1" />
      <LineId Id="446" Count="0" />
      <LineId Id="377" Count="9" />
      <LineId Id="620" Count="0" />
      <LineId Id="619" Count="0" />
      <LineId Id="387" Count="1" />
      <LineId Id="504" Count="1" />
      <LineId Id="503" Count="0" />
      <LineId Id="389" Count="0" />
      <LineId Id="374" Count="0" />
      <LineId Id="391" Count="1" />
      <LineId Id="447" Count="0" />
      <LineId Id="450" Count="0" />
      <LineId Id="394" Count="8" />
      <LineId Id="622" Count="0" />
      <LineId Id="621" Count="0" />
      <LineId Id="403" Count="1" />
      <LineId Id="507" Count="1" />
      <LineId Id="506" Count="0" />
      <LineId Id="405" Count="0" />
      <LineId Id="390" Count="0" />
      <LineId Id="407" Count="1" />
      <LineId Id="448" Count="0" />
      <LineId Id="409" Count="9" />
      <LineId Id="624" Count="0" />
      <LineId Id="623" Count="0" />
      <LineId Id="419" Count="1" />
      <LineId Id="510" Count="1" />
      <LineId Id="509" Count="0" />
      <LineId Id="421" Count="0" />
      <LineId Id="406" Count="0" />
      <LineId Id="422" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="449" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="192" Count="1" />
      <LineId Id="197" Count="1" />
      <LineId Id="194" Count="0" />
      <LineId Id="232" Count="0" />
      <LineId Id="231" Count="0" />
      <LineId Id="235" Count="0" />
      <LineId Id="240" Count="1" />
      <LineId Id="243" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="643" Count="0" />
      <LineId Id="236" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="625" Count="0" />
      <LineId Id="572" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="513" Count="1" />
      <LineId Id="512" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="210" Count="6" />
      <LineId Id="233" Count="1" />
      <LineId Id="237" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="242" Count="0" />
      <LineId Id="244" Count="0" />
      <LineId Id="246" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="644" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="217" Count="1" />
      <LineId Id="209" Count="0" />
      <LineId Id="626" Count="0" />
      <LineId Id="576" Count="0" />
      <LineId Id="580" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="220" Count="2" />
      <LineId Id="157" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="199" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="204" Count="2" />
      <LineId Id="202" Count="1" />
      <LineId Id="200" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>